--- a/.env-sample
+++ b/.env-sample
@@ -1,5 +1,5 @@
 SECRET_KEY=
-DEBUG=
+DEBUG=True
 
 # Database configuration
 DB_NAME=
@@ -13,3 +13,11 @@ EMAIL_PORT=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=
+DEFAULT_FROM_EMAIL=foodOnline Marketplace <EMAIL_HOST_USER>
+
+# Google Maps API Key
+GOOGLE_MAPS_API_KEY=
+
+# PayPal API Key
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
